# pydmclab

./: .gitignore  INCAR  MANIFEST.in  QueryMP.py  README.md  StrucTools.py  SubmitTools.py  dist_perovskite_charged_p2.cif  docs.md  pyproject.toml  setup.py
demos/: adsorption_scratch.py  demo_adsorption_launcher.py  demo_chgnet_continue_md.py  demo_chgnet_finetuning.py  demo_chgnet_md.py  demo_chgnet_relaxation.py  demo_energies.py  demo_fairchem_continue_md.py  demo_fairchem_md.py  demo_fairchem_relaxation.py  demo_hulls.py  demo_interfaces_launcher.py  demo_launcher_template.py  demo_mace_relaxation.py  demo_mag.py  demo_matgl_relaxation.py  demo_old_query.py  demo_plot_dos.py  demo_query.py  demo_struc.py
dev/: KPOINTS
examples/: launch.py
hpc_tests/: _sub_configs.yaml  test_passer.py  test_sub_hpc.py  test_vasp.py  test_vasp.py~  test_vasp_hpc.py
old/: chgnet_md.py  old_test_struc.py  phonons.py  setup.py
pydmc/: #demo_vasp_dmc.py#  CompTools.py  EntryTools.py  MPQuery.py  MagTools.py  StrucTools.py  SubmitTools.py  ThermoTools.py  VASPTools.py  __init__.py  _launch_configs.yaml  _launch_configs.yaml~  _slurm_configs.yaml  _slurm_configs.yaml~  _sub_configs.yaml  _sub_configs.yaml~  _vasp_configs.yaml  base_configs.yaml  demo_CompTools.py  demo_MPQuery.py  demo_StrucTools.py  demo_ThermoTools.py  demo_VASPTools.py  demo_errorhandler.py  demo_mpstandard.py  demo_vasp_errors.py  handy.py  partitions.yaml  pd_demo.py
pydmclab/: merge_test.py
pymdc/: CompTools.py  MagTools.py  VASPTools.py
tests/: _launch_configs.yaml  _sub_configs.yaml  _vasp_configs.yaml  (+22 more)
(+692 files in other folders)
